# ATS

./: .gitignore  README.md  docker-compose.yml
backend/: AtsSuite.sln  Dockerfile  README.md
backend/Migrations/: InitialCreate.cs
backend/src/Ats.Api/: Ats.Api.csproj  Program.cs
backend/src/Ats.Api/Endpoints/: JobsEndpoints.cs
backend/src/Ats.Api/Models/: JobDtos.cs
backend/src/Ats.Api/Services/: JobService.cs
backend/src/Ats.Api/Validators/: AdvanceApplicationRequestValidator.cs  LinkCandidateRequestValidator.cs
backend/src/Ats.Domain/Entities/: Application.cs  ApplicationNote.cs  Candidate.cs  CandidateDocument.cs  CandidateSkill.cs  Embedding.cs  EventAudit.cs  Interview.cs  Job.cs  JobTag.cs  (+5 more)
backend/src/Ats.Infrastructure/: Ats.Infrastructure.csproj
backend/tests/Ats.Api.Tests/: Ats.Api.Tests.csproj  JobsEndpointsTests.cs
docs/: Architecture.md  Deployment.md  Integrations.md  ModelTraining.md  Runbook.md
frontend/: Dockerfile  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx
frontend/src/pages/: CandidatesPage.tsx  JobsPage.tsx
frontend/src/state/: jobsStore.ts
infra/: README.md
infra/bicep/: main.bicep
infra/bicep/modules/: appinsights.bicep  servicebus.bicep  sql.bicep  storage.bicep
ml-service/: Dockerfile  README.md  pyproject.toml
ml-service/app/: main.py
ml-service/app/routers/: ai.py  training.py
ml-service/app/services/: embedder.py  matcher.py  ner.py  predictor.py  trainer.py
ml-service/tests/: test_rank.py
ops/: README.md
scripts/: load-sample-cvs.sh
seeds/: README.md
(+15 files in other folders)
