[tool.poetry]
name = "ml-service"
version = "0.1.0"
description = "ML microservice for ATS"
authors = ["ATS Team <team@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.103.0"
uvicorn = {extras = ["standard"], version = "0.23.2"}
scikit-learn = "1.3.2"
xgboost = "1.7.6"
spacy = "3.6.1"
pydantic = "1.10.12"
pandas = "2.1.2"
numpy = "1.26.1"
mlflow = "2.7.1"
pgvector = "0.2.1"
psycopg[binary] = "3.1.12"
openai = "1.2.3"
sentence-transformers = "2.2.2"
shap = "0.43.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.2"
httpx = "0.24.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
